css/overarching.css
.theme-dark {
    background-color: #0D2715;
    color: #C4FDC4;
}

.theme-medium {
    color: #537E3A;
}

.theme-light-accent-1 {
    color: #5adbff;
}

.theme-light-accent-2 {
    color: #fff;
}


.theme-light-accent-3 {
    color: #FF85D4;
}

.theme-text-light {
    color: #C4FDC4 !important;
}

.theme-text-medium {
    color: #264E24 !important;
}

.theme-text-dark {
    color: #0D2715 !important;
}

.myrow {
    --bs-gutter-x: 1.5rem;
    --bs-gutter-y: 0;
    display: flex;
    flex-wrap: wrap;
    margin-top: calc(-1 * var(--bs-gutter-y));
    margin-right: calc(-.5 * var(--bs-gutter-x));
    margin-left: calc(-.5 * var(--bs-gutter-x));
}

.navbar-toggler{
    border: 1px solid #C4FDC4 !important;
}

